@@ -1,8 +1,8 @@
 # Application template recipe for the rails_apps_composer. Change the recipe here:
 # https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/omniauth.rb
 
-after_bundler do
-  say_wizard "recipe running after 'bundle install'"
+stage_two do
+  say_wizard "recipe stage two"
   if prefer :authentication, 'omniauth'
     repo = 'https://raw.github.com/RailsApps/rails-omniauth/master/'
     copy_from_repo 'config/initializers/omniauth.rb', :repo => repo
