@@ -13,7 +13,8 @@ if prefer :apps4, 'rails-signup-download'
   prefs[:pry] = false
   prefs[:quiet_assets] = true
   prefs[:pages] = 'users'
-  after_everything do
+  stage_three do
+    say_wizard "recipe stage three"
     repo = 'https://raw.github.com/RailsApps/rails-signup-download/master/'
 
     # >-------------------------------[ Controllers ]--------------------------------<
