@@ -43,9 +43,9 @@ end
 @configs = {}
 
 @after_blocks = []
-def after_bundler(&block); @after_blocks << [@current_recipe, block]; end
-@after_everything_blocks = []
-def after_everything(&block); @after_everything_blocks << [@current_recipe, block]; end
+def stage_two(&block); @after_blocks << [@current_recipe, block]; end
+@stage_three_blocks = []
+def stage_three(&block); @stage_three_blocks << [@current_recipe, block]; end
 @before_configs = {}
 def before_config(&block); @before_configs[@current_recipe] = block; end
 
